# examples/petstore/lib/testdata/doc/openapi.golden.json
@@ -91,12 +91,16 @@
 				"properties": {
 					"age": {
 						"description": "Age of the pet, in years",
-						"example": 18,
+						"example": 2,
 						"type": "integer"
 					},
 					"id": {
 						"example": "pet-123456",
 						"type": "string"
+					},
+					"is_adopted": {
+						"description": "Is the pet adopted",
+						"type": "boolean"
 					},
 					"name": {
 						"example": "Napoleon",
@@ -114,10 +118,14 @@
 				"properties": {
 					"age": {
 						"description": "Age of the pet, in years",
-						"example": 18,
+						"example": 2,
 						"maximum": 100,
 						"minimum": 0,
 						"type": "integer"
+					},
+					"is_adopted": {
+						"description": "Is the pet adopted",
+						"type": "boolean"
 					},
 					"name": {
 						"example": "Napoleon",
@@ -135,10 +143,15 @@
 				"description": "PetsUpdate schema",
 				"properties": {
 					"age": {
-						"example": 18,
+						"example": 2,
 						"maximum": 100,
 						"nullable": true,
 						"type": "integer"
+					},
+					"is_adopted": {
+						"description": "Is the pet adopted",
+						"nullable": true,
+						"type": "boolean"
 					},
 					"name": {
 						"description": "Name of the pet",
@@ -157,16 +170,68 @@
 		}
 	},
 	"info": {
-		"description": "\nThis is the autogenerated OpenAPI documentation for your [Fuego](https://github.com/go-fuego/fuego) API.\n\nBelow is a Fuego Cheatsheet to help you get started. Don't hesitate to check the [Fuego documentation](https://go-fuego.github.io/fuego) for more details.\n\nHappy coding! 🔥\n\n## Usage\n\n### Route registration\n\n```go\nfunc main() {\n\t// Create a new server\n\ts := fuego.NewServer()\n\n\t// Register some routes\n\tfuego.Post(s, \"/hello\", myController)\n\tfuego.Get(s, \"/myPath\", otherController)\n\tfuego.Put(s, \"/hello\", thirdController)\n\n\tadminRoutes := fuego.Group(s, \"/admin\")\n\tfuego.Use(adminRoutes, myMiddleware) // This middleware (for authentication, etc...) will be available for routes starting by /admin/*, \n\tfuego.Get(adminRoutes, \"/hello\", groupController) // This route will be available at /admin/hello\n\n\t// Start the server\n\ts.Start()\n}\n```\n\n### Basic controller\n\n```go\ntype MyBody struct {\n\tName string `json:\"name\" validate:\"required,max=30\"`\n}\n\ntype MyResponse struct {\n\tAnswer string `json:\"answer\"`\n}\n\nfunc hello(ctx *fuego.ContextWithBody[MyBody]) (*MyResponse, error) {\n\tbody, err := ctx.Body()\n\tif err != nil {\n\t\treturn nil, err\n\t}\n\n\treturn \u0026MyResponse{Answer: \"Hello \" + body.Name}, nil\n}\n```\n\n### Add more details to the route\n\n```go\nfuego.Get(s, \"/hello\", myController).\n\tDescription(\"This is a route that says hello\").\n\tSummary(\"Say hello\").\n```\n",
+		"description": "\nThis is the autogenerated OpenAPI documentation for your [Fuego](https://github.com/go-fuego/fuego) API.\n\nBelow is a Fuego Cheatsheet to help you get started. Don't hesitate to check the [Fuego documentation](https://go-fuego.github.io/fuego) for more details.\n\nHappy coding! 🔥\n\n## Usage\n\n### Route registration\n\n```go\nfunc main() {\n\t// Create a new server\n\ts := fuego.NewServer()\n\n\t// Register some routes\n\tfuego.Post(s, \"/hello\", myController)\n\tfuego.Get(s, \"/myPath\", otherController)\n\tfuego.Put(s, \"/hello\", thirdController)\n\n\tadminRoutes := fuego.Group(s, \"/admin\")\n\tfuego.Use(adminRoutes, myMiddleware) // This middleware (for authentication, etc...) will be available for routes starting by /admin/*, \n\tfuego.Get(adminRoutes, \"/hello\", groupController) // This route will be available at /admin/hello\n\n\t// Start the server\n\ts.Start()\n}\n```\n\n### Basic controller\n\n```go\ntype MyBody struct {\n\tName string `json:\"name\" validate:\"required,max=30\"`\n}\n\ntype MyResponse struct {\n\tAnswer string `json:\"answer\"`\n}\n\nfunc hello(ctx *fuego.ContextWithBody[MyBody]) (*MyResponse, error) {\n\tbody, err := ctx.Body()\n\tif err != nil {\n\t\treturn nil, err\n\t}\n\n\treturn \u0026MyResponse{Answer: \"Hello \" + body.Name}, nil\n}\n```\n\n### Add openAPI information to the route\n\n```go\nfuego.Get(petsGroup, \"/\", rs.getAllPets,\n\toption.Query(\"name\", \"Filter by name\", param.Example(\"cat name\", \"felix\"), param.Nullable()),\n\toption.QueryInt(\"per_page\", \"Number of items per page\", param.Required()),\n\toption.QueryInt(\"page\", \"Page number\", param.Default(1), param.Example(\"first page\", 1), param.Example(\"100th page\", 100)),\n\toption.QueryBool(\"is_adopted\", \"Filter by adoption status\"),\n\toption.Tags(\"coucou\", \"my-tag\"),\n\toption.AddDescription(\"Get all pets\"),\n)\n```\n\nThen, in the controller\n\n```go\ntype MyBody struct {\n\tName string `json:\"name\" validate:\"required,max=30\"`\n}\n\ntype MyResponse struct {\n\tAnswer string `json:\"answer\"`\n}\n\nfunc getAllPets(ctx *fuego.ContextNoBody) (*MyResponse, error) {\n\tname := ctx.QueryParam(\"name\")\n\tperPage := ctx.QueryParamInt(\"per_page\", 100) // Should be same as the declared default value. If not, a warning will be sent at runtime.\n\treturn \u0026MyResponse{Answer: \"Hello \" + body.Name}, nil\n}\n```\n",
 		"title": "OpenAPI",
 		"version": "0.0.1"
 	},
 	"paths": {
 		"/pets/": {
 			"get": {
-				"description": "controller: `github.com/go-fuego/fuego/examples/petstore/controllers.PetsResources.getAllPets`\n\n---\n\n",
+				"description": "controller: `github.com/go-fuego/fuego/examples/petstore/controllers.PetsResources.filterPets`\n\n---\n\nFilter pets",
 				"operationId": "GET_/pets/",
 				"parameters": [
+					{
+						"description": "Number of items per page",
+						"in": "query",
+						"name": "per_page",
+						"required": true,
+						"schema": {
+							"type": "integer"
+						}
+					},
+					{
+						"description": "Page number",
+						"examples": {
+							"100th page": {
+								"value": 100
+							},
+							"1st page": {
+								"value": 1
+							},
+							"42nd page": {
+								"value": 42
+							}
+						},
+						"in": "query",
+						"name": "page",
+						"schema": {
+							"default": 1,
+							"type": "integer"
+						}
+					},
+					{
+						"description": "Filter by name",
+						"examples": {
+							"cat name": {
+								"value": "felix"
+							}
+						},
+						"in": "query",
+						"name": "name",
+						"schema": {
+							"nullable": true,
+							"type": "string"
+						}
+					},
+					{
+						"description": "Only get pets younger than given age in years",
+						"in": "query",
+						"name": "younger_than",
+						"schema": {
+							"default": 3,
+							"type": "integer"
+						}
+					},
 					{
 						"description": "header description",
 						"in": "header",
@@ -222,7 +287,7 @@
 						"description": ""
 					}
 				},
-				"summary": "get all pets",
+				"summary": "filter pets",
 				"tags": [
 					"pets"
 				]
@@ -289,9 +354,105 @@
 				]
 			}
 		},
+		"/pets/all": {
+			"get": {
+				"description": "controller: `github.com/go-fuego/fuego/examples/petstore/controllers.PetsResources.getAllPets`\n\n---\n\nGet all pets",
+				"operationId": "GET_/pets/all",
+				"parameters": [
+					{
+						"description": "Number of items per page",
+						"in": "query",
+						"name": "per_page",
+						"required": true,
+						"schema": {
+							"type": "integer"
+						}
+					},
+					{
+						"description": "Page number",
+						"examples": {
+							"100th page": {
+								"value": 100
+							},
+							"1st page": {
+								"value": 1
+							},
+							"42nd page": {
+								"value": 42
+							}
+						},
+						"in": "query",
+						"name": "page",
+						"schema": {
+							"default": 1,
+							"type": "integer"
+						}
+					},
+					{
+						"description": "header description",
+						"in": "header",
+						"name": "X-Header",
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Pets"
+									},
+									"type": "array"
+								}
+							},
+							"application/xml": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Pets"
+									},
+									"type": "array"
+								}
+							}
+						},
+						"description": "OK"
+					},
+					"400": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPError"
+								}
+							}
+						},
+						"description": "Bad Request _(validation or deserialization error)_"
+					},
+					"500": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPError"
+								}
+							}
+						},
+						"description": "Internal Server Error _(panics)_"
+					},
+					"default": {
+						"description": ""
+					}
+				},
+				"summary": "get all pets",
+				"tags": [
+					"my-tag",
+					"pets"
+				]
+			}
+		},
 		"/pets/by-age": {
 			"get": {
-				"description": "controller: `github.com/go-fuego/fuego/examples/petstore/controllers.PetsResources.getAllPetsByAge`\n\n---\n\n",
+				"description": "controller: `github.com/go-fuego/fuego/examples/petstore/controllers.PetsResources.getAllPetsByAge`\n\n---\n\nReturns an array of pets grouped by age",
 				"operationId": "GET_/pets/by-age",
 				"parameters": [
 					{
